--- a/Fodinha/Fodinha/Fodinha.csproj
+++ b/Fodinha/Fodinha/Fodinha.csproj
@@ -17,11 +17,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.5.1" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Helpers\" />
     <None Remove="ViewModel\" />
+    <None Remove="Microsoft.AppCenter.Crashes" />
+    <None Remove="Microsoft.AppCenter.Analytics" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
